--- a/index.html
+++ b/index.html
@@ -5,10 +5,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="header__wrapper">
+            <ul class="header__menu">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Готовые решения</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Работы</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <div class="header__details">
+                <div class="header__info">example@mail.ru</div>
+                <div class="header__info">+7 (900) 000 00 00</div>
+            </div>
+            <div class="header__links">
+                <a href="#" class="header__profile">
+                    <img src="img/profile-circle.svg" alt="">
+                </a>
+                <a href="" class="header__button button-white">
+                    Для профессионалов
+                </a>
+                <a href="" class="header__button button">
+                    Оставить заявку
+                </a>
+            </div>
+        </div>
+    </header>
+    <aside class="sidebar">
+        <div class="sidebar__wrapper">
+            <div class="sidebar__menu">
+                <img src="img/sidebar-menu.png" alt="">
+            </div>
+            <a href="#" class="sidebar__search">
+                <img src="img/search.png" alt="">
+            </a>
+            <div class="sidebar__line"></div>
+            <a href="#" class="sidebar__icon">
+                <img src="img/wa.png" alt="">
+            </a>
+            <a href="#" class="sidebar__icon">
+                <img src="img/tg.png" alt="">
+            </a>
+            <a href="#" class="sidebar__icon">
+                <img src="img/vk.png" alt="">
+            </a>
+            <div class="sidebar__line"></div>
+            <div class="sidebar__button ">
+                <button data-fancybox="" data-src="#consult" class="button">Бесплатная консультация</button>
+            </div>
+        </div>
+    </aside>
+    <div class="menu">
+        <div class="menu__wrapper">
+            <div class="menu__close">
+                <img src="img/close.png" alt="">
+            </div>
+            <ul class="menu__nav">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">О ферме</a></li>
+                <li><a href="product.html">Наши животные</a></li>
+                <li><a href="#">Фотогалерея</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <div class="menu__phone">
+                <a href="+79000000000">+7 (900) 000 00 00</a>
+            </div>
+            <button data-fancybox="" data-src="#consult" class="menu__button button">Бесплатная консультация</button>
+        </div>
+    </div>
 </body>
 
 </html>
