--- a/index.html
+++ b/index.html
@@ -39,26 +39,37 @@
     </header>
     <aside class="sidebar">
         <div class="sidebar__wrapper">
-            <div class="sidebar__menu">
-                <img src="img/sidebar-menu.png" alt="">
+            <div class="sidebar__block">
+                <div class="sidebar__menu">
+                    <img src="img/sidebar-menu.png" alt="">
+                </div>
+                <a href="#" class="sidebar__search">
+                    <img src="img/search.png" alt="">
+                </a>
+                <a href="#" class="sidebar__icon">
+                    <img src="img/wa.png" alt="">
+                </a>
+                <a href="#" class="sidebar__icon">
+                    <img src="img/tg.png" alt="">
+                </a>
+                <a href="#" class="sidebar__icon">
+                    <img src="img/vk.png" alt="">
+                </a>
             </div>
-            <a href="#" class="sidebar__search">
-                <img src="img/search.png" alt="">
-            </a>
             <div class="sidebar__line"></div>
-            <a href="#" class="sidebar__icon">
-                <img src="img/wa.png" alt="">
-            </a>
-            <a href="#" class="sidebar__icon">
-                <img src="img/tg.png" alt="">
-            </a>
-            <a href="#" class="sidebar__icon">
-                <img src="img/vk.png" alt="">
-            </a>
-            <div class="sidebar__line"></div>
-            <div class="sidebar__button">
-                <button data-fancybox="" data-src="#consult" class="button">Бесплатная консультация</button>
+            <div class="sidebar__block">
+                <a href="/" class="sidebar__logo">
+                    <img src="img/sidebar-logo.png" alt="">
+                </a>
             </div>
+            <div class="sidebar__line"></div>
+            <div class="sidebar__block">
+                <div class="sidebar__button">
+                    <button data-fancybox="" data-src="#consult" class="button">Бесплатная консультация</button>
+                </div>
+            </div>
+        </div>
+
         </div>
     </aside>
     <div class="menu">
@@ -81,5 +92,6 @@
         </div>
     </div>
 </body>
+<script src="js/main.js"></script>
 
 </html>
