--- a/index.html
+++ b/index.html
@@ -72,23 +72,35 @@
 
         </div>
     </aside>
-    <div class="menu">
+    <div class="menu menu-active">
         <div class="menu__wrapper">
             <div class="menu__close">
                 <img src="img/close.png" alt="">
             </div>
-            <ul class="menu__nav">
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">О ферме</a></li>
-                <li><a href="product.html">Наши животные</a></li>
-                <li><a href="#">Фотогалерея</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-            <div class="menu__phone">
-                <a href="+79000000000">+7 (900) 000 00 00</a>
+            <div class="menu-top">
+                <a href="/" class="menu__logo">
+                    <img src="img/logo.svg" alt="">
+                </a>
+                <ul class="menu__nav">
+                    <li><a href="">Главная</a></li>
+                    <li><a href="">Каталог</a></li>
+                    <li><a href="">Готовые решения</a></li>
+                    <li><a href="">О компании</a></li>
+                    <li><a href="">Наши работы</a></li>
+                    <li><a href="">Вопрос-ответ</a></li>
+                    <li><a href="">Новости</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
             </div>
-            <button data-fancybox="" data-src="#consult" class="menu__button button">Бесплатная консультация</button>
+
+            <div class="menu__info">
+                <a href="mailto:example@mail.ru" class="menu__info-block">
+                    <img src="img/mail-icon.png" alt="">
+                    example@mail.ru
+                </a>
+                <a href="tel:+7900000000" class="menu__info-block"><img src="img/phone-icon.png" alt="">+7 (900) 000 00
+                    00</a>
+            </div>
         </div>
     </div>
 </body>
