--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         </div>
     </aside>
-    <div class="menu menu-active">
+    <div class="menu">
         <div class="menu__wrapper">
             <div class="menu__close">
                 <img src="img/close.png" alt="">
@@ -84,7 +84,19 @@
                 <ul class="menu__nav">
                     <li><a href="">Главная</a></li>
                     <li><a href="">Каталог</a></li>
-                    <li><a href="">Готовые решения</a></li>
+                    <li class="menu__downtoggle">
+                        <a href="">Готовые решения</a>
+                        <div class="menu__downbackground">
+                            <ul class="menu__downmenu">
+                                <li><a href="">Зеленая кровля</a></li>
+                                <li><a href="">Классическая кровля</a></li>
+                                <li><a href="">Террасная доска</a></li>
+                                <li><a href="">Плитка, камень, брусчатка</a></li>
+                                <li><a href="">Стилобат</a></li>
+                                <li><a href="">Балластаная кровля</a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li><a href="">О компании</a></li>
                     <li><a href="">Наши работы</a></li>
                     <li><a href="">Вопрос-ответ</a></li>
