--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -115,7 +117,66 @@
             </div>
         </div>
     </div>
+    <section class="hero">
+        <div class="hero__wrapper">
+            <div class="swiper hero__slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide hero__slide">
+                        <div class="container">
+                            <img class="hero__slide-image" src="img/main-slider.png" alt="">
+                            <div class="hero__slide-block">
+                                <div class="hero__slide-logo">
+                                    <img src="img/logo.svg" alt="">
+                                </div>
+                                <div class="hero__slide-title">Эксплуатируемые кровли с уникальным стандартом качества
+                                </div>
+                                <div class="hero__slide-text">Самоклеящийся композитный полимерный гидроизоляционный
+                                    материал для самых ответственных объектов.</div>
+                                <div class="hero__slide-button button-white">Подробнее</div>
+                            </div>
+                            <div class="hero__slide-block">
+                                <img class="hero__slider-right" src="img/slide-image.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide hero__slide">
+                        <div class="container">
+                            <img class="hero__slide-image" src="img/main-slider.png" alt="">
+                            <div class="hero__slide-block">
+                                <div class="hero__slide-logo">
+                                    <img src="img/logo.svg" alt="">
+                                </div>
+                                <div class="hero__slide-title">Эксплуатируемые кровли с уникальным стандартом качества
+                                </div>
+                                <div class="hero__slide-text">Самоклеящийся композитный полимерный гидроизоляционный
+                                    материал для самых ответственных объектов.</div>
+                                <div class="hero__slide-button button-white">Подробнее</div>
+                            </div>
+                            <div class="hero__slide-block">
+                                <img class="hero__slider-right" src="img/slide-image.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero__slider-controls">
+                    <div class="hero__slider-prev">
+                        <img src="img/hero-slider-left.png" alt="">
+                    </div>
+                    <div class="swiper-pagination hero__slider-pagination"></div>
+                    <div class="hero__slider-next">
+                        <img src="img/hero-slider-right.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
+<script src="js/jquery-3.7.1.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
 <script src="js/main.js"></script>
+
 
 </html>
