--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li><a href="#">Контакты</a></li>
             </ul>
             <div class="header__details">
-                <div class="header__info">example@mail.ru</div>
-                <div class="header__info">+7 (900) 000 00 00</div>
+                <a href="mailto:example@mail.ru" class="header__info">example@mail.ru</a>
+                <a href="tel:+79000000000" class="header__info">+7 (900) 000 00 00</a>
             </div>
             <div class="header__links">
                 <a href="#" class="header__profile">
@@ -165,6 +165,78 @@
                     <div class="swiper-pagination hero__slider-pagination"></div>
                     <div class="hero__slider-next">
                         <img src="img/hero-slider-right.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="catalog">
+        <div class="container">
+            <div class="title">
+                <div class="title__count">01</div>
+                <div class="title__text">Каталог</div>
+            </div>
+            <div class="catalog__wrapper">
+                <div class="catalog__products">
+                    <div class="catalog__product product">
+                        <div class="product__image">
+                            <img src="img/product-1.png" alt="">
+                        </div>
+                        <div class="product__type">Мембрана</div>
+                        <div class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</div>
+                        <div class="product__price">54,00 €</div>
+                    </div>
+                    <div class="catalog__product product">
+                        <div class="product__image">
+                            <img src="img/product-2.png" alt="">
+                        </div>
+                        <div class="product__type">Мембрана</div>
+                        <div class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</div>
+                        <div class="product__price">54,00 €</div>
+                    </div>
+                    <div class="catalog__product product-big">
+                        <div class="product-big__image">
+                            <img src="img/product-big.png" alt="">
+                        </div>
+                        <div class="product-big__block">
+                            <div class="product-big__text">
+                                <div class="product-big__title"></div>
+                                <div class="product-big__descr"></div>
+                            </div>
+                            <div class="product-big__button button-white">
+                                <img src="img/menu-toggle.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="catalog__product product">
+                        <div class="product__image">
+                            <img src="img/product-3.png" alt="">
+                        </div>
+                        <div class="product__type">Клей</div>
+                        <div class="product__title">Клей РАББЕРФЛЕКС® FG</div>
+                        <div class="product__price">54,00 €</div>
+                    </div>
+                    <div class="catalog__product product">
+                        <div class="product__image">
+                            <img src="img/product-4.png" alt="">
+                        </div>
+                        <div class="product__type">Растворитель</div>
+                        <div class="product__title">Растворитель RUBBERFLEX® G-500</div>
+                        <div class="product__price">5 000 €</div>
+                    </div>
+                    <div class="catalog__product product-big">
+                        <div class="product-big__image">
+                            <img src="img/product-big.png" alt="">
+                        </div>
+                        <div class="product-big__block">
+                            <div class="product-big__text">
+                                <div class="product-big__title"></div>
+                                <div class="product-big__descr"></div>
+                            </div>
+                            <div class="product-big__button button-white">
+                                <img src="img/menu-toggle.png" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
