--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     </section>
     <section class="catalog">
         <div class="container">
+            <img class="catalog__bg" src="img/catalog-bg.png" alt="">
             <div class="title">
                 <div class="title__count">01</div>
                 <div class="title__text">Каталог</div>
@@ -179,29 +180,29 @@
             <div class="catalog__wrapper">
                 <div class="catalog__products">
                     <div class="catalog__product product">
-                        <div class="product__image">
+                        <a href="#" class="product__image">
                             <img src="img/product-1.png" alt="">
-                        </div>
+                        </a>
                         <div class="product__type">Мембрана</div>
-                        <div class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</div>
+                        <a href="#" class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</a>
                         <div class="product__price">54,00 €</div>
                     </div>
                     <div class="catalog__product product">
-                        <div class="product__image">
+                        <a href="#" class="product__image">
                             <img src="img/product-2.png" alt="">
-                        </div>
+                        </a>
                         <div class="product__type">Мембрана</div>
-                        <div class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</div>
+                        <a href="#" class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</a>
                         <div class="product__price">54,00 €</div>
                     </div>
                     <div class="catalog__product product-big">
-                        <div class="product-big__image">
+                        <a href="#" class="product-big__image">
                             <img src="img/product-big.png" alt="">
-                        </div>
+                        </a>
                         <div class="product-big__block">
                             <div class="product-big__text">
-                                <div class="product-big__title"></div>
-                                <div class="product-big__descr"></div>
+                                <div class="product-big__title">Зеленая кровля</div>
+                                <div class="product-big__descr">С нами ваша кровля будет всегда в надежных руках!</div>
                             </div>
                             <div class="product-big__button button-white">
                                 <img src="img/menu-toggle.png" alt="">
@@ -209,33 +210,60 @@
                         </div>
                     </div>
                     <div class="catalog__product product">
-                        <div class="product__image">
+                        <a href="#" class="product__image">
                             <img src="img/product-3.png" alt="">
-                        </div>
+                        </a>
                         <div class="product__type">Клей</div>
-                        <div class="product__title">Клей РАББЕРФЛЕКС® FG</div>
-                        <div class="product__price">54,00 €</div>
-                    </div>
-                    <div class="catalog__product product">
-                        <div class="product__image">
-                            <img src="img/product-4.png" alt="">
-                        </div>
-                        <div class="product__type">Растворитель</div>
-                        <div class="product__title">Растворитель RUBBERFLEX® G-500</div>
+                        <a href="#" class="product__title">Клей РАББЕРФЛЕКС® FG</a>
                         <div class="product__price">5 000 €</div>
                     </div>
+                    <div class="catalog__product product">
+                        <a href="#" class="product__image">
+                            <img src="img/product-4.png" alt="">
+                        </a>
+                        <div class="product__type">Растворитель</div>
+                        <a href="#" class="product__title">Растворитель RUBBERFLEX® G-500</a>
+                        <div class="product__price">90 €</div>
+                    </div>
                     <div class="catalog__product product-big">
-                        <div class="product-big__image">
+                        <a href="#" class="product-big__image">
                             <img src="img/product-big.png" alt="">
-                        </div>
+                        </a>
                         <div class="product-big__block">
                             <div class="product-big__text">
-                                <div class="product-big__title"></div>
-                                <div class="product-big__descr"></div>
+                                <div class="product-big__title">Классическая кровля</div>
+                                <div class="product-big__descr">С нами ваша кровля будет всегда в надежных руках!</div>
                             </div>
                             <div class="product-big__button button-white">
                                 <img src="img/menu-toggle.png" alt="">
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="company">
+        <div class="container">
+            <div class="title">
+                <div class="title__count">02</div>
+                <div class="title__text">О компании</div>
+            </div>
+            <div class="company__wrapper">
+                <div class="company__text">
+                    <div class="company__title">Наша компания специализируется на обслуживании и ремонте эксплуатируемых
+                        кровель. </div>
+                    <div class="company__descr">Мы предлагаем широкий спектр услуг, включая чистку, ремонт и укрепление
+                        кровельных конструкций.
+                        Наш опытный персонал обладает необходимыми знаниями и навыками для обеспечения надежной и
+                        долговечной защиты вашего здания от внешних воздействий.
+                    </div>
+                    <div class="company__button button">Подробнее</div>
+                </div>
+                <div class="company__slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide company__slide">
+
                         </div>
                     </div>
                 </div>
