--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -227,7 +227,7 @@
                     </div>
                     <div class="catalog__product product-big">
                         <a href="#" class="product-big__image">
-                            <img src="img/product-big.png" alt="">
+                            <img src="img/product-big-2.png" alt="">
                         </a>
                         <div class="product-big__block">
                             <div class="product-big__text">
@@ -245,25 +245,208 @@
     </section>
     <section class="company">
         <div class="container">
-            <div class="title">
-                <div class="title__count">02</div>
-                <div class="title__text">О компании</div>
-            </div>
+
             <div class="company__wrapper">
                 <div class="company__text">
+                    <div class="title">
+                        <div class="title__count">02</div>
+                        <div class="title__text">О компании</div>
+                    </div>
                     <div class="company__title">Наша компания специализируется на обслуживании и ремонте эксплуатируемых
                         кровель. </div>
-                    <div class="company__descr">Мы предлагаем широкий спектр услуг, включая чистку, ремонт и укрепление
-                        кровельных конструкций.
-                        Наш опытный персонал обладает необходимыми знаниями и навыками для обеспечения надежной и
-                        долговечной защиты вашего здания от внешних воздействий.
-                    </div>
-                    <div class="company__button button">Подробнее</div>
-                </div>
-                <div class="company__slider">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide company__slide">
+                    <div class="company__descr">
+                        <p> Мы предлагаем широкий спектр услуг, включая чистку, ремонт и укрепление
+                            кровельных конструкций.</p>
+                        <p>Наш опытный персонал обладает необходимыми знаниями и навыками для обеспечения надежной и
+                            долговечной защиты вашего здания от внешних воздействий.</p>
 
+                    </div>
+                    <a href="#" class="company__button button">Подробнее</a>
+                </div>
+                <div class="company__slider-wrap">
+                    <div class="swiper company__slider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide company__slide">
+                                <img src="img/company-slider.png" alt="">
+                                <div class="company__slide-block">
+                                    <div class="company__slide-text">Подпись к фото</div>
+                                    <div class="company__slide-city">Город</div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide company__slide">
+                                <img src="img/company-slider.png" alt="">
+                                <div class="company__slide-block">
+                                    <div class="company__slide-text">Подпись к фото</div>
+                                    <div class="company__slide-city">Сочи</div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide company__slide">
+                                <img src="img/company-slider.png" alt="">
+                                <div class="company__slide-block">
+                                    <div class="company__slide-text">Подпись к фото</div>
+                                    <div class="company__slide-city">Краснодар</div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide company__slide">
+                                <img src="img/company-slider.png" alt="">
+                                <div class="company__slide-block">
+                                    <div class="company__slide-text">Подпись к фото</div>
+                                    <div class="company__slide-city">Новороссийск</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="company__slider-controls">
+                            <div class="company__pagination"></div>
+                            <div class="company__buttons">
+                                <div class="company-prev">
+                                    <img src="img/company-slider-left.png" alt="">
+                                </div>
+                                <div class="company-next">
+                                    <img src="img/company-slider-right.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="trust">
+        <div class="container">
+            <div class="trust__wrapper">
+                <div class="trust__title">
+                    <div class="title">
+                        <div class="title__count">03</div>
+                        <div class="title__text">Нам доверяют</div>
+                    </div>
+                    <div class="trust__text">К нам обращаются компании, которые выбирают лучшее</div>
+                </div>
+                <div class="trust__items">
+                    <a href="#" class="trust__item">
+                        <img src="img/trust-1.png" alt="">
+                    </a>
+                    <a href="#" class="trust__item">
+                        <img src="img/trust2.png" alt="">
+                    </a>
+                    <a href="#" class="trust__item">
+                        <img src="img/trust-3.png" alt="">
+                    </a>
+                    <a href="#" class="trust__item">
+                        <img src="img/trust-4.png" alt="">
+                    </a>
+                    <div class="trust__item"></div>
+                    <a href="#" class="trust__item">
+                        <img src="img/trust-5.png" alt="">
+                    </a>
+                    <div class="trust__item"></div>
+                    <a href="#" class="trust__item">
+                        <img src="img/trust-6.png" alt="">
+                    </a>
+                </div>
+                <a href="#" class="button trust__button">Наши объекты</a>
+            </div>
+        </div>
+    </section>
+    <section class="advantages">
+        <div class="container">
+            <div class="title">
+                <div class="title__count">04</div>
+                <div class="title__text">Система контроля качества</div>
+            </div>
+            <div class="advantages__wrapper">
+                <div class="advantages__title">Кровля, которая прослужит всю жизнь — это:</div>
+                <div class="advantages__items">
+                    <div class="advantages__item">
+                        <div class="advantages__item-title">
+                            <img src="img/medal-star.png" alt="">
+                            Гарантия 40 лет на материалы
+                        </div>
+                        <div class="advantages__text">
+                            Долговечность мембраны подтверждена исптыаниями на климатическое старение
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <div class="advantages__item-title">
+                            <img src="img/brush.png" alt="">
+                            Индивидуальное проектное решение
+                        </div>
+                        <div class="advantages__text">
+                            Разработка решения исходя из потребностей заказчика под конкретный запрос.
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <div class="advantages__item-title">
+                            <img src="img/brush-1.png" alt="">
+                            Комплексная услуга монтажа кровли
+                        </div>
+                        <div class="advantages__text">
+                            Обучение и контроль качества монтажа включены в стоимость
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <div class="advantages__item-title">
+                            <img src="img/calendar-edit.png" alt="">
+                            Контроль объекта после ввода в эксплуатацию
+                        </div>
+                        <div class="advantages__text">
+                            Объект проходит регулярный инспекционный контроль
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <div class="advantages__item-title">
+                            <img src="img/layer.png" alt="">
+                            Единая база объектов
+                        </div>
+                        <div class="advantages__text">
+                            Каждый заказчик получает доступ в личный кабинет с полной историей реализации проектов
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="advantages__button button">Стандарты качества</a>
+            </div>
+        </div>
+    </section>
+    <section class="consultation">
+        <div class="container">
+            <div class="consultation__wrapper">
+                <div class="consultation__text">
+                    <div class="consultation__title">Получить консультацию</div>
+                    <div class="consultation__descr">Введите ваш номер телефона</div>
+                </div>
+                <form class="consultation__form">
+                    <input type="tel" class="maskphone" placeholder="+7 (9--) --- -- --">
+                    <button class="consultation__button button-white">Отправить</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section class="news">
+        <div class="container">
+            <img src="img/texture-2.png" alt="" class="news__bg">
+            <div class="news__wrapper">
+                <div class="news__info">
+                    <div class="title">
+                        <div class="title__count">05</div>
+                        <div class="title__text">Новости</div>
+                    </div>
+                    <div class="news__text">Рассказываем о нашей работе и производстве</div>
+                    <a href="#" class="button news__button">Смотреть все</a>
+                </div>
+                <div class="news__items">
+                    <div class="news__item">
+                        <div class="news__item-image"><img src="img/news-1.png" alt=""></div>
+                        <div class="news__item-title">Объект сдан!</div>
+                        <div class="news__item-block">
+                            <div class="news__item-date">10.01.2024</div>
+                            <a href="#" class="news__item-button"><img src="img/menu-toggle.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="news__item">
+                        <div class="news__item-image"><img src="img/news-1.png" alt=""></div>
+                        <div class="news__item-title">Объект сдан!</div>
+                        <div class="news__item-block">
+                            <div class="news__item-date">10.01.2024</div>
+                            <a href="#" class="news__item-button"><img src="img/menu-toggle.png" alt=""></a>
                         </div>
                     </div>
                 </div>
